refactor project naming